apps/webapp-svc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: orders
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: acraksworkshopdev.azurecr.io/webapp:v1.0.6 # {"$imagepolicy": "flux-system:webapp-svc-policy"}
        ports:
        - containerPort: 80
