apps/webapp-svc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: apps
spec:
  selector:
    app: webapp
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
