apps/webapp-svc/webapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ing
  namespace: orders
  annotations:
    konghq.com/strip-path: "true"   # strips /webapp before sending to webapp service
spec:
  ingressClassName: kong
  rules:
    - host: 4.220.29.14.nip.io
      http:
        paths:
          - path: /webapp
            pathType: Prefix
            backend:
              service:
                name: webapp
                port:
                  number: 80
  tls:
    - hosts:
        - 4.220.29.14.nip.io
      secretName: webapp-tls
